--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,32 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
-    <link rel="stylesheet" data-th-href="@{'/css/output.css'}">
-    
-  </head>
-  <body>
-    <div class="bg-gray-200 w-1/2 p-4 flex flex-col justify-center items-center spacw-y-3 mx-auto mt-4">
-      <h1 class="text-2xl font-bold" data-th-text="${name}">Welcome to home page</h1>
-      <p class="text-xl">YouTube : <span data-th-text="${YoutubeChannel}"></span></p>
-      <p>GitHub Repo link : <span th:text="${githubRepo}"></span></p>
-      <a th:href="${githubRepo}" target="_blank">click here to open</a>
-      <p class="text-gray-600">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
-        voluptates, obcaecati quia distinctio, in praesentium doloribus quo
-        tenetur nulla aspernatur possimus? Porro velit tenetur recusandae sint
-        eaque explicabo et laudantium vitae eligendi iure? Voluptatibus labore
-        fugit sapiente perferendis tempora obcaecati mollitia deleniti
-        excepturi! Ullam non optio tempora dicta, veritatis rerum!
-      </p>
-
-      <div><button class="px-3 py-3 rounded bg-blue-700 text-white hover:bg-blue-600">click Here</button></div>
-      
+<html lang="en" th:replace="~{base :: parent(~{::#content},~{::title},~{::script})}">
+<head>
+    <title>home</title>
+</head>
+<body>
+    <div id="content">
+         <h1>Welcome to home page</h1>
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, facere.</p>
     </div>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
-  </body>
+    <script>
+        console.log("home page")
+    </script>
+</body>
 </html>
