--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" th:replace="~{base :: parent(~{::#content},~{::title},~{::script})}">
 <head>
-    <title>About</title>
+    <title>Login</title>
 </head>
 <body>
     <div id="content">
-         <h1>Welcome to about page</h1>
+         <h1>Welcome to Login page  page</h1>
          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, facere.</p>
     </div>
     <script>
-        console.log("about")
+        console.log("Login page");
     </script>
 </body>
 </html>
