--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" th:replace="~{base :: parent(~{::#content},~{::title},~{::script})}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Services</title>
 </head>
 <body>
-    <h1>This is my services page 
-        
-    </h1>
-    <hr>
-    <div th:insert="~{base :: parent(~{::section})}">
-        <section>
-            <p>kya be chutiya ho kya </p>
-        </section>
+    <div id="content">
+         <h1>Welcome to service page  page</h1>
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, facere.</p>
     </div>
+    <script>
+        console.log("services page");
+    </script>
 </body>
 </html>
